--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <!-- TITLE OF THE PRESENTATION -->
   <!-- ============================================================ -->
   <title>
-    CHANGE THIS!
+    Vivenciando a Pós-Graduação em Geofísica | IAG - USP
   </title>
   <!-- ============================================================ -->
 
-  <!-- Set a favicon icon (usually the lab logo) -->
-  <link rel="shortcut icon" href="assets/favicon.png">
+  <link rel="shortcut icon" href="assets/logos/LOGO (compasso)/iagcompasso_V.png">
 
   <!-- Fonts -->
   <link rel="stylesheet" href="fonts/fontawesome/css/all.css">
